app/service.lib.yml
#@ load("app/refs.lib.yml", "service_name", "resource_labels", "deployment_labels")

#@ def service(props):
---
apiVersion: v1
kind: Service
metadata:
  name: #@ service_name(props)
  labels: #@ resource_labels(props)
  #@ if/end props.namespace:
  namespace: #@ props.namespace
spec:
  ports:
  - port: #@ props.port
    protocol: TCP
  selector: #@ deployment_labels(props)
#@ end
