app/ingress.lib.yml
#@ load("app/refs.lib.yml", "service_name", "resource_labels")

#@ def ingress(props):
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: #@ props.name + "-ingress"
  labels: #@ resource_labels(props)
  #@ if/end props.namespace:
  namespace: #@ props.namespace
spec:
  rules:
  - http:
      paths:
      - path: /
        backend:
          serviceName: #@ service_name(props)
          servicePort: #@ props.port
    #@ if/end props.domain:
    host: #@ props.domain
#@ end
